--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -26,10 +26,8 @@
       "isGpuEnabled": false
     },
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+      "provenance": []
+    }
   },
   "nbformat_minor": 0,
   "nbformat": 4,
@@ -54,7 +52,7 @@
         "id": "It3-4Qw_cBQ6"
       },
       "outputs": [],
-      "execution_count": 4
+      "execution_count": 1
     },
     {
       "cell_type": "markdown",
@@ -120,24 +118,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5VyldLoxcStk",
-        "outputId": "211b2179-0cf5-4f32-bc24-1a802eb774b1"
+        "outputId": "f3ad0154-033d-4ebf-8042-47d741c45228"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-19 07:56:55--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.251.12.207, 64.233.170.207, 74.125.200.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.251.12.207|:443... connected.\n",
+            "--2025-09-22 08:29:43--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.69.207, 64.233.181.207, 192.178.129.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.69.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
-            "Saving to: ‘10_food_classes_10_percent.zip.1’\n",
+            "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M  19.4MB/s    in 9.1s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   184MB/s    in 0.9s    \n",
             "\n",
-            "2025-09-19 07:57:04 (17.6 MB/s) - ‘10_food_classes_10_percent.zip.1’ saved [168546183/168546183]\n",
+            "2025-09-22 08:29:44 (184 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -154,7 +152,7 @@
       "metadata": {
         "id": "BB5IpZFIleoc"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -170,37 +168,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hccRg2Vledy",
-        "outputId": "5791e712-09ed-45ac-aad0-232a86a0c31b"
+        "outputId": "4f767691-fff0-4a43-fb9d-7e0b64ab26c4"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
-            "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
             "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n"
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n"
           ]
         }
       ]
@@ -251,9 +249,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wHc9cw-8leaS",
-        "outputId": "42205f12-8c3b-4c8a-c89b-cece0fa7cc03"
+        "outputId": "9e235e20-4bfc-47fd-8ac6-17062dc6f905"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +305,7 @@
       "metadata": {
         "id": "lt9_L9wHleQ7"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -396,7 +394,7 @@
       "metadata": {
         "id": "cfuo9Vl8leIA"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -409,13 +407,12 @@
         "efficientnet_url = \"https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1\"\n",
         "\n",
         "# # New: EfficientNetB0 feature vector (version 2)\n",
-        "# efficientnet_url = \"https://tfhub.dev/google/imagenet/efficientnet_v2_imagenet1k_b0/feature_vector/2\"\n",
-        ""
+        "# efficientnet_url = \"https://tfhub.dev/google/imagenet/efficientnet_v2_imagenet1k_b0/feature_vector/2\"\n"
       ],
       "metadata": {
         "id": "98_y2fW9ld_Z"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -444,42 +441,159 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
-        "import tensorflow_hub as hub\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "\n",
+        "# Define constants\n",
         "IMAGE_SHAPE = (224, 224)\n",
+        "NUM_CLASSES = 10  # Replace with the actual number of classes in your dataset\n",
         "\n",
-        "def create_model(model_url, num_classes=10):\n",
+        "def create_model_resnet(num_classes=NUM_CLASSES):\n",
+        "    # Define input layer\n",
         "    inputs = keras.Input(shape=IMAGE_SHAPE + (3,))\n",
         "\n",
-        "    # Load hub model as a callable\n",
-        "    hub_model = hub.load(model_url)\n",
+        "    # Use Keras built-in ResNet50 model\n",
+        "    base_model = tf.keras.applications.ResNet50(\n",
+        "        weights='imagenet',  # Pre-trained weights\n",
+        "        include_top=False,   # Exclude top dense layer\n",
+        "        input_shape=IMAGE_SHAPE + (3,),\n",
+        "        pooling='avg'       # Global average pooling to get feature vector\n",
+        "    )\n",
+        "    base_model.trainable = False  # Freeze the base model\n",
         "\n",
-        "    # Wrap hub_model call in a Lambda layer\n",
-        "    x = layers.Lambda(lambda img: hub_model(img))(inputs)\n",
+        "    # Apply base model\n",
+        "    x = base_model(inputs)\n",
         "\n",
-        "    # Output layer\n",
-        "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
+        "    # Add dropout and dense layers\n",
+        "    x = layers.Dropout(0.2)(x)\n",
+        "    outputs = layers.Dense(num_classes, activation='softmax')(x)\n",
         "\n",
-        "    return keras.Model(inputs, outputs)\n",
+        "    # Create model\n",
+        "    model = keras.Model(inputs, outputs)\n",
         "\n",
-        "# Example usage\n",
-        "resnet_url = \"https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/5\"\n",
-        "resnet_model = create_model(resnet_url,\n",
-        "                            num_classes=train_data_10_percent.num_classes)\n",
+        "    return model\n",
         "\n",
+        "# Clear Keras session\n",
+        "tf.keras.backend.clear_session()\n",
+        "\n",
+        "# Disable mixed precision\n",
+        "tf.keras.mixed_precision.set_global_policy('float32')\n",
+        "\n",
+        "# Create and compile the model\n",
+        "resnet_model = create_model_resnet(num_classes=NUM_CLASSES)\n",
         "resnet_model.compile(\n",
         "    loss=\"categorical_crossentropy\",\n",
         "    optimizer=tf.keras.optimizers.Adam(),\n",
         "    metrics=[\"accuracy\"]\n",
-        ")\n"
+        ")\n",
+        "\n",
+        "# Display model summary\n",
+        "resnet_model.summary()"
       ],
       "metadata": {
-        "id": "XOZekZ2woAIV"
+        "id": "XOZekZ2woAIV",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 304
+        },
+        "outputId": "ffd1636a-2352-4f7d-ebca-87c3986ef2a1"
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "\u001b[1m94765736/94765736\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1mModel: \"functional\"\u001b[0m\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"functional\"</span>\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ input_layer (\u001b[38;5;33mInputLayer\u001b[0m)        │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m3\u001b[0m)    │             \u001b[38;5;34m0\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ resnet50 (\u001b[38;5;33mFunctional\u001b[0m)           │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2048\u001b[0m)           │    \u001b[38;5;34m23,587,712\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dropout (\u001b[38;5;33mDropout\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2048\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m10\u001b[0m)             │        \u001b[38;5;34m20,490\u001b[0m │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ input_layer (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)        │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)    │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ resnet50 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Functional</span>)           │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2048</span>)           │    <span style=\"color: #00af00; text-decoration-color: #00af00\">23,587,712</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dropout (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dropout</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2048</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">10</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">20,490</span> │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m23,608,202\u001b[0m (90.06 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">23,608,202</span> (90.06 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m20,490\u001b[0m (80.04 KB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">20,490</span> (80.04 KB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m23,587,712\u001b[0m (89.98 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">23,587,712</span> (89.98 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -521,22 +635,10 @@
         "print(tf.config.list_physical_devices('GPU'))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Wignj0fUn_9M",
-        "outputId": "d01868e0-6619-4438-f314-ef4b43b9573d"
+        "id": "Wignj0fUn_9M"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
