--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -26,8 +26,10 @@
       "isGpuEnabled": false
     },
     "colab": {
-      "provenance": []
-    }
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
   "nbformat_minor": 0,
   "nbformat": 4,
@@ -118,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5VyldLoxcStk",
-        "outputId": "f3ad0154-033d-4ebf-8042-47d741c45228"
+        "outputId": "a5481209-4dcc-45c2-de5a-fcd72b087b0d"
       },
       "execution_count": 2,
       "outputs": [
@@ -126,16 +128,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-22 08:29:43--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.69.207, 64.233.181.207, 192.178.129.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.69.207|:443... connected.\n",
+            "--2025-09-22 08:34:59--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.137.207, 142.250.101.207, 142.251.2.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.137.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   184MB/s    in 0.9s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   213MB/s    in 0.8s    \n",
             "\n",
-            "2025-09-22 08:29:44 (184 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2025-09-22 08:35:00 (213 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -168,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hccRg2Vledy",
-        "outputId": "4f767691-fff0-4a43-fb9d-7e0b64ab26c4"
+        "outputId": "fe280a11-44b8-4932-b7a4-a9d1b5f304fc"
       },
       "execution_count": 4,
       "outputs": [
@@ -177,28 +179,28 @@
           "name": "stdout",
           "text": [
             "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
-            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
             "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n"
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n"
           ]
         }
       ]
@@ -249,7 +251,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wHc9cw-8leaS",
-        "outputId": "9e235e20-4bfc-47fd-8ac6-17062dc6f905"
+        "outputId": "7e050b06-2cd6-468e-e995-e42dc63288a8"
       },
       "execution_count": 5,
       "outputs": [
@@ -441,28 +443,30 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "\n",
         "# Define constants\n",
         "IMAGE_SHAPE = (224, 224)\n",
         "NUM_CLASSES = 10  # Replace with the actual number of classes in your dataset\n",
+        "RESNET_URL = \"https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/4\"\n",
         "\n",
-        "def create_model_resnet(num_classes=NUM_CLASSES):\n",
+        "# Custom layer to wrap hub.KerasLayer\n",
+        "class HubLayer(tf.keras.layers.Layer):\n",
+        "    def __init__(self, model_url, **kwargs):\n",
+        "        super(HubLayer, self).__init__(**kwargs)\n",
+        "        self.hub_layer = hub.KerasLayer(model_url, trainable=False)\n",
+        "\n",
+        "    def call(self, inputs):\n",
+        "        return self.hub_layer(inputs)\n",
+        "\n",
+        "def create_model_tf_hub_fixed(model_url, num_classes=NUM_CLASSES):\n",
         "    # Define input layer\n",
         "    inputs = keras.Input(shape=IMAGE_SHAPE + (3,))\n",
         "\n",
-        "    # Use Keras built-in ResNet50 model\n",
-        "    base_model = tf.keras.applications.ResNet50(\n",
-        "        weights='imagenet',  # Pre-trained weights\n",
-        "        include_top=False,   # Exclude top dense layer\n",
-        "        input_shape=IMAGE_SHAPE + (3,),\n",
-        "        pooling='avg'       # Global average pooling to get feature vector\n",
-        "    )\n",
-        "    base_model.trainable = False  # Freeze the base model\n",
-        "\n",
-        "    # Apply base model\n",
-        "    x = base_model(inputs)\n",
+        "    # Apply custom Hub layer\n",
+        "    x = HubLayer(model_url)(inputs)\n",
         "\n",
         "    # Add dropout and dense layers\n",
         "    x = layers.Dropout(0.2)(x)\n",
@@ -480,7 +484,7 @@
         "tf.keras.mixed_precision.set_global_policy('float32')\n",
         "\n",
         "# Create and compile the model\n",
-        "resnet_model = create_model_resnet(num_classes=NUM_CLASSES)\n",
+        "resnet_model = create_model_tf_hub_fixed(RESNET_URL, num_classes=NUM_CLASSES)\n",
         "resnet_model.compile(\n",
         "    loss=\"categorical_crossentropy\",\n",
         "    optimizer=tf.keras.optimizers.Adam(),\n",
@@ -488,26 +492,20 @@
         ")\n",
         "\n",
         "# Display model summary\n",
-        "resnet_model.summary()"
+        "resnet_model.summary()\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "XOZekZ2woAIV",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 304
+          "height": 267
         },
-        "outputId": "ffd1636a-2352-4f7d-ebca-87c3986ef2a1"
+        "outputId": "be972208-7504-4d89-c406-643a21714c82"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "\u001b[1m94765736/94765736\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -530,7 +528,7 @@
               "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
               "│ input_layer (\u001b[38;5;33mInputLayer\u001b[0m)        │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m224\u001b[0m, \u001b[38;5;34m3\u001b[0m)    │             \u001b[38;5;34m0\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ resnet50 (\u001b[38;5;33mFunctional\u001b[0m)           │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2048\u001b[0m)           │    \u001b[38;5;34m23,587,712\u001b[0m │\n",
+              "│ hub_layer (\u001b[38;5;33mHubLayer\u001b[0m)            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2048\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
               "│ dropout (\u001b[38;5;33mDropout\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2048\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
@@ -543,7 +541,7 @@
               "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
               "│ input_layer (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)        │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">224</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)    │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-              "│ resnet50 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Functional</span>)           │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2048</span>)           │    <span style=\"color: #00af00; text-decoration-color: #00af00\">23,587,712</span> │\n",
+              "│ hub_layer (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">HubLayer</span>)            │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2048</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
               "│ dropout (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dropout</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2048</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
               "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
@@ -558,10 +556,10 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m23,608,202\u001b[0m (90.06 MB)\n"
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m20,490\u001b[0m (80.04 KB)\n"
             ],
             "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">23,608,202</span> (90.06 MB)\n",
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">20,490</span> (80.04 KB)\n",
               "</pre>\n"
             ]
           },
@@ -584,10 +582,10 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m23,587,712\u001b[0m (89.98 MB)\n"
+              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
             ],
             "text/html": [
-              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">23,587,712</span> (89.98 MB)\n",
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
               "</pre>\n"
             ]
           },
@@ -617,83 +615,35 @@
         "    validation_steps=len(test_data),\n",
         "    callbacks=[create_tensorboard_callback(dir_name=\"tensorflow_hub\",\n",
         "                                           experiment_name=\"resnet50V2\")]\n",
-        ")\n",
-        "\n",
-        "\n",
-        "\n"
+        ")\n"
       ],
       "metadata": {
-        "id": "XSdlwwNMoAE1"
+        "id": "XSdlwwNMoAE1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b4d8f01e-b2d4-48a9-81e1-924847d4f5e6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving TensorBoard log files to: tensorflow_hub/resnet50V2/20250922-084601\n",
+            "Epoch 1/5\n",
+            "\u001b[1m 1/24\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m23:15\u001b[0m 61s/step - accuracy: 0.0625 - loss: 3.2295"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "print(tf.config.list_physical_devices('GPU'))"
-      ],
+      "source": [],
       "metadata": {
         "id": "Wignj0fUn_9M"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!nvidia-smi"
-      ],
-      "metadata": {
-        "id": "S54N-2bBiVaV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "pnaTtRtyiWV6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "k6DfrKrMiWMi"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LfveSi5kiWFa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fs9n3ckgiV84"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2KQAhVTLiVz8"
-      },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
